// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.eslintignore
!.eslintrc.js
!.gitattributes
!.gitignore
!.gitkeep
!.husky
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
!.github/
!.husky/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with Beachball configuration 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.eslintignore
!.eslintrc.js
!.gitattributes
!.gitignore
!.gitkeep
!.husky
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
!.github/
!.husky/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/beachball.config.js
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "beachball.config.js",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "beachball.config.js": "/** @type {import('beachball').BeachballConfig} */
module.exports = {
  "branch": "origin/main",
  "gitTags": false,
  "ignorePatterns": [
    "*.test.*",
    ".*/**",
    "__snapshots__/",
    "dist/",
    "node_modules/"
  ]
}",
}
`;

exports[`with EditorConfig options 1`] = `
{
  ".editorconfig": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

root=true

[*]
charset=utf-8
end_of_line=lf
indent_style=space
indent_size=2
insert_final_newline=true
trim_trailing_whitespace=true

[Dockerfile]
indent_style=tab
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.eslintignore
!.eslintrc.js
!.gitattributes
!.gitignore
!.gitkeep
!.husky
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
!.github/
!.husky/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.editorconfig
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".editorconfig",
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with Terraform enabled 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.eslintignore
!.eslintrc.js
!.gitattributes
!.gitignore
!.gitkeep
!.husky
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
!.terraform.lock.hcl
*.db
*.log
!.github/
!.husky/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with TypeScript enabled 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.eslintignore
!.eslintrc.js
!.gitattributes
!.gitignore
!.gitkeep
!.husky
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
*.tsbuildinfo
!.github/
!.husky/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`with code owners configured 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.eslintignore
!.eslintrc.js
!.gitattributes
!.gitignore
!.gitkeep
!.husky
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
!.github/
!.husky/
!.projen/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/CODEOWNERS
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "CODEOWNERS",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "CODEOWNERS": "* @admin",
}
`;

exports[`with workspaces 1`] = `
{
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
.*
!.babelrc
!.dockerignore
!.editorconfig
!.eslintignore
!.eslintrc.js
!.gitattributes
!.gitignore
!.gitkeep
!.husky
!.npmignore
!.openssl
!.prettierignore
!.projenrc*
*.db
*.log
!.github/
!.husky/
!.projen/
packages/*/lib/
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/pnpm-workspace.yaml
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "pnpm-workspace.yaml",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node --loader ts-node/esm .projenrc.mts",
          },
        ],
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "pnpm-workspace.yaml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

packages:
  - packages/*
",
}
`;
